[package]
name = "rust_rider"
version = "0.1.0"
authors = ["Christopher Patton <chpatton013@gmail.com>"]

[dependencies]
error-chain = "0.11.0"
nalgebra = "0.13.0"
ncollide = "0.13.0"
nphysics2d = "0.6"
piston = "0.34.0"
piston2d-graphics = "0.23.0"
piston_window = "0.72.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[features]
# Treat warnings as a build error.
strict = []
